manifest/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcc-nodejs
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcc-nodejs
  template:
    metadata:
      labels:
        app: tcc-nodejs
    spec:
      containers:
        - name: tcc-nodejs-prod
          image: thanapongsj/tcc-nodejs:release-6
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
