manifest/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tcc-nodejs-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: prod.com
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: tcc-nodejs-service
                port:
                  number: 80
